# StarBotCore

./: .gitignore  README.md  pom.xml  pyproject.toml
src/main/java/com/starlwr/bot/common/: StarBotCommonApplication.java
src/main/java/com/starlwr/bot/common/config/: DataSourceConfig.java  StarBotCommonProperties.java  StarBotCommonThreadPoolConfig.java  WebClientConfig.java
src/main/java/com/starlwr/bot/common/converter/: ColorConverter.java  FontConverter.java
src/main/java/com/starlwr/bot/common/datasource/: AbstractDataSource.java  DataSource.java  DataSourceServiceRegistry.java  EmptyDataSource.java  JsonDataSource.java  MySQLDataSource.java
src/main/java/com/starlwr/bot/common/enums/: LivePlatform.java  Platform.java  PushPlatform.java  PushTargetType.java
src/main/java/com/starlwr/bot/common/event/: StarBotBaseEvent.java  StarBotExternalBaseEvent.java  StarBotInternalBaseEvent.java
src/main/java/com/starlwr/bot/common/exception/: DataSourceException.java
src/main/java/com/starlwr/bot/common/factory/: StarBotCommonPainterFactory.java
src/main/java/com/starlwr/bot/common/handler/: StarBotEventHandler.java
src/main/java/com/starlwr/bot/common/listener/: StarBotExternalBaseEventListener.java
src/main/resources/: application.yml  banner.txt  logback.xml
starbot_core/: __init__.py
starbot_core/core/: event.py  live.py
starbot_core/exception/: ApiException.py  LiveException.py  LiveListenerException.py  LoginException.py  NetworkException.py  ResponseCodeException.py  ResponseException.py
starbot_core/utils/: network.py
tests/: test_live.py
(+146 files in other folders)
